[package]
name = "schematics-gui-reml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracker = "0.1"
relm4 = "0.6.1"
relm4-components = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
serde-aux = "4.2.0"
colors-transform = "0.2.11"
relm4-icons = { version = "0.6.0", features = ["plus", "minus", "color-picker", "work-week"] }

