[package]
name = "schematics-gui-reml"
description = "UI renderer for Schematics"
authors = ["Tamas Geschitz"]
license = "MIT"
homepage = "https://schematicsui.com"
categories = ["gui", "development-tools::schematics"]
keywords = ["schematics", "gui"]
readme = "README.md"
repository = "https://github.com/gtamas/schematicsgui"
documentation = "https://github.com/gtamas/schematicsgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracker = "0.1"
relm4 = "0.6.1"
relm4-components = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
serde-aux = "4.2.0"
colors-transform = "0.2.11"
relm4-icons = { version = "0.6.0", features = ["plus", "minus", "color-picker", "work-week", "copy"] }
serde_with = "3.3.0"
strip-ansi-escapes = "0.2.0"
chrono = "0.4.31"

