[package]
name = "schematics-gui-reml"
description = "UI renderer for Schematics"
authors = ["Tamas Geschitz"]
license = "MIT"
homepage = "https://schematicsui.com"
categories = ["gui", "development-tools::schematics"]
keywords = ["schematics", "gui"]
readme = "README.md"
repository = "https://github.com/gtamas/schematicsgui"
documentation = "https://github.com/gtamas/schematicsgui"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "Schematics UI"
identifier = "com.github.gtamas.schematicsgui"
copyright = "Copyright (c) Tamas Geschitz 2024. All rights reserved."
category = "Developer Tool"
short_description = "A general purpose GUI generator for Schematics."
version = "1.0.0"
icon = ["resources/icons/icon_32x32.png","resources/icons/icon_128x128.png"]
resources = ["resources"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracker = "0.1"
relm4 = "0.6.2"
relm4-components = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
serde-aux = "4.2.0"
colors-transform = "0.2.11"
relm4-icons = { version = "0.6.0", features = ["plus", "minus", "color-picker", "work-week", "copy"] }
serde_with = "3.3.0"
strip-ansi-escapes = "0.2.0"
chrono = "0.4.31"
sourceview5 = "0.6.1"
convert_case = "0.6.0"
is_executable = "1.0.1"
mockall = "0.12.1"

